[VBV-1446] Fixing closure definition is broken in template view
Reviewed-on: http://bellevue-ci.eng.vmware.com:8080/13675
Compute-Verified: jenkins <jenkins@vmware.com>
Closures-Verified: jenkins <jenkins@vmware.com>
Bellevue-Verified: jenkins <jenkins@vmware.com>
Upgrade-Verified: jenkins <jenkins@vmware.com>
CS-Verified: jenkins <jenkins@vmware.com>

--- a/ui/app/src/styles/components/_list-views.scss
+++ b/ui/app/src/styles/components/_list-views.scss
@@ -987,6 +987,9 @@ $elements-side-margin: $elements-margin / 2;
 .images-view .template-details.closure-form {
   overflow: auto;
   z-index: 102;
+  left: 0px;
+  top: 0px;
+  margin-top: 0px;
 }
 
 .template-details .edit-network.closable-view .control-btns,
